Nav-tabs for in modal, weird visual glitches fixed
ID of step is now shown inside step, name could be done as well but id is cleaner. Right now id is always -1, will be id in database to keep steps apart from eachother. The content of a navtab has a fixed height, overflow will scroll. For some reason the scrollbar doesn't show up, though it is scrollable. Not sure why.

--- a/resources/assets/sass/designer.scss
+++ b/resources/assets/sass/designer.scss
@@ -16,7 +16,7 @@ html, body {
 #graphContainerForBorder {
   padding: 2px 2px 2px 2px;
   border: 1px solid #4e555b;
-  height: 71vh;
+  height: 100%;
 }
 
 #variablesDiv {
@@ -29,6 +29,7 @@ html, body {
   height: 85vh;
   padding-left: 15px;
   padding-right: 15px;
+  display: block;
 }
 
 #graphDivCard {
@@ -52,17 +53,13 @@ html, body {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  max-width: calc(100% - 19px);
+  display: inline-block;
 }
 
 .scrollbarAtProject {
   max-height: 78vh;
   overflow-y: auto;
-}
-
-.badge-maxwidth {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 [data-toggle~="collapse"] {
@@ -77,8 +74,19 @@ html, body {
 
 /* ---------- Color palet ------------- */
 .btn-colorpick {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
+  font-size: 18px;
+  border-color: #000;
+}
+
+.outline {
+  color: white;
+  text-shadow:
+  -1px -1px 0 #000,
+  1px -1px 0 #000,
+  -1px 1px 0 #000,
+  1px 1px 0 #000;    
 }
 
 .btn-colorpick::after {
@@ -106,4 +114,22 @@ html, body {
 
 .bootstrap-colorpalette .btn-color:hover {
   border: 1px solid #000;
+}
+
+/* ------------------- modal ----------------------- */
+.nav-link.active {
+  border-bottom-color: #fff !important;
+  background-color: #fff !important;
+}
+
+.fade {
+  display: none;
+}
+
+.fade.show {
+  display: block;
+}
+
+#modalCard {
+  height: 55vh;
 }
